@@ -1,5 +1,5 @@
-Version: 16.11.03.00
-Build Number: 79
-Build Timestamp: 20161103.0913
+Version: 16.11.17.00
+Build Number: 81
+Build Timestamp: 20161116.2117
 SCM Revision: b29cabbb3fb54b75c09f2f9f6b1a0868229b5e63
     
