@@ -89,6 +89,6 @@ dependencies[] = views_ui
 dependencies[] = wysiwyg_filter
 
 
-; Added by build script on 20161103.0913
-version = "16.11.03.00"
+; Added by build script on 20161116.2117
+version = "16.11.17.00"
     
