@@ -2,7 +2,7 @@
 
 // autoload_real.php @generated by Composer
 
-class ComposerAutoloaderInit628485f70355284d0ae0aa937da4a9e8
+class ComposerAutoloaderInitd46a6d29ac08ada7c34c178cc0bb1537
 {
     private static $loader;
 
@@ -19,15 +19,15 @@ class ComposerAutoloaderInit628485f70355284d0ae0aa937da4a9e8
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInit628485f70355284d0ae0aa937da4a9e8', 'loadClassLoader'), true, true);
+        spl_autoload_register(array('ComposerAutoloaderInitd46a6d29ac08ada7c34c178cc0bb1537', 'loadClassLoader'), true, true);
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInit628485f70355284d0ae0aa937da4a9e8', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInitd46a6d29ac08ada7c34c178cc0bb1537', 'loadClassLoader'));
 
         $useStaticLoader = PHP_VERSION_ID >= 50600 && !defined('HHVM_VERSION');
         if ($useStaticLoader) {
             require_once __DIR__ . '/autoload_static.php';
 
-            call_user_func(\Composer\Autoload\ComposerStaticInit628485f70355284d0ae0aa937da4a9e8::getInitializer($loader));
+            call_user_func(\Composer\Autoload\ComposerStaticInitd46a6d29ac08ada7c34c178cc0bb1537::getInitializer($loader));
         } else {
             $map = require __DIR__ . '/autoload_namespaces.php';
             foreach ($map as $namespace => $path) {
